--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,17 +72,17 @@ jobs:
           - name: Test run after install
             if: matrix.make == 'test-release'
             run: >-
-                ./local_installation/bin/pg_service_template
-                --config=./local_installation/etc/pg_service_template/static_config.yaml
-                --config_vars=./local_installation/etc/pg_service_template/config_vars.yaml
+                ./local_installation/bin/service_template
+                --config=./local_installation/etc/service_template/static_config.yaml
+                --config_vars=./local_installation/etc/service_template/config_vars.yaml
                 &
 
           - name: Check work run service
             if: matrix.make == 'test-release'
             run: |
-                ps aux | grep pg_service_template | grep config && curl http://localhost:8080/ping -v
+                ps aux | grep service_template | grep config && curl http://localhost:8080/ping -v
 
           - name: Stop all
             if: matrix.make == 'test-release'
             run: |
-                killall pg_service_template
+                killall service_template
