--- a/configs/config_vars.testing.yaml
+++ b/configs/config_vars.testing.yaml
@@ -6,5 +6,5 @@ is-testing: true
 
 server-port: 8080
 
-# pg_service_template_db_1 is the service name + _ + filename of the db_1.sql
-dbconnection: 'postgresql://testsuite@localhost:15433/pg_service_template_db_1'
+# service_template_db_1 is the service name + _ + filename of the db_1.sql
+dbconnection: 'postgresql://testsuite@localhost:15433/service_template_db_1'
