--- a/configs/config_vars.testing.yaml
+++ b/configs/config_vars.testing.yaml
@@ -6,5 +6,5 @@ is-testing: true
 
 server-port: 8080
 
-# service_template_db_1 is the service name + _ + filename of the db_1.sql
-dbconnection: 'postgresql://testsuite@localhost:15433/service_template_db_1'
+# my_database_db is the service name + _ + filename of the db.sql
+dbconnection: 'postgresql://testsuite@localhost:15433/my_database_db'
