--- a/configs/static_config.yaml
+++ b/configs/static_config.yaml
@@ -50,10 +50,20 @@ components_manager:
             throttling_enabled: false
             url_trailing_slash: strict-match
 
-        handler-hello:                    # Finally! Our handler.
-            path: /v1/hello               # Registering handler by URL '/v1/hello'.
-            method: POST                  # It will only reply to POST requests.
-            task_processor: main-task-processor  # Run it on CPU bound task processor
+        handler-hello:
+            path: /v1/hello
+            method: POST
+            task_processor: main-task-processor
+
+        handler-user-submit-solution:
+            path: /v1/submit
+            method: POST
+            task_processor: main-task-processor
+
+        handler-admin-load-task:
+            path: /v1/load
+            method: POST
+            task_processor: main-task-processor
 
         postgres-db-1:
             dbconnection: $dbconnection
