--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,13 @@ target_link_libraries(${PROJECT_NAME}_objs PUBLIC userver::postgresql)
 add_executable(${PROJECT_NAME} src/main.cpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE ${PROJECT_NAME}_objs)
 
+# Unit Tests
+add_executable(${PROJECT_NAME}_unittest
+    src/checker_test/python_checker_test.cpp
+)
+target_link_libraries(${PROJECT_NAME}_unittest PRIVATE ${PROJECT_NAME}_objs userver::utest)
+add_google_tests(${PROJECT_NAME}_unittest)
+
 # Functional Tests
 userver_testsuite_add_simple()
 
