--- a/configs/static_config.yaml
+++ b/configs/static_config.yaml
@@ -75,6 +75,11 @@ components_manager:
             method: GET
             task_processor: main-task-processor
 
+        handler-api-get-tasks:
+            path: /api/tasks/get-tasks
+            method: GET
+            task_processor: main-task-processor
+
         postgres-db-1:
             dbconnection: $dbconnection
             dbconnection#env: DB_CONNECTION
