--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,15 +38,7 @@ jobs:
                     ${{matrix.os}} ${{matrix.info}} ccache-dir ${{github.ref}} run-'
                     ${{matrix.os}} ${{matrix.info}} ccache-
 
-          - name: Install Isolate
-            run: |
-                sudo apt-get update
-                sudo apt-get install libcap-dev asciidoc-base
-                git clone https://github.com/ioi/isolate.git
-                cd isolate
-                make
-                sudo make install
-                cd ..
+          - uses: ioi/isolate@v1
 
           - name: Install packages
             run: |
