--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,15 @@ jobs:
                     ${{matrix.os}} ${{matrix.info}} ccache-dir ${{github.ref}} run-'
                     ${{matrix.os}} ${{matrix.info}} ccache-
 
-          - uses: ioi/isolate@v1
+          - name: Install Isolate
+            run: |
+                sudo apt-get update
+                sudo apt-get install libcap-dev asciidoc-base systemd
+                git clone https://github.com/ioi/isolate.git
+                cd isolate
+                make
+                sudo make install
+                cd ..
 
           - name: Install packages
             run: |
